--- a/react-boilerplate-master/package.json
+++ b/react-boilerplate-master/package.json
@@ -70,6 +70,7 @@
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
     "express": "4.16.4",
+    "firebase": "^7.6.1",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
@@ -85,6 +86,7 @@
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
+    "react-redux-firebase": "^3.0.6",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
