--- a/react-boilerplate-master/package.json
+++ b/react-boilerplate-master/package.json
@@ -90,6 +90,7 @@
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
+    "redux-saga-firebase": "^0.15.0",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
     "styled-components": "4.2.0"
