--- a/react-boilerplate-master/package.json
+++ b/react-boilerplate-master/package.json
@@ -65,6 +65,11 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@material/react-button": "^0.15.0",
+    "@types/classnames": "^2.2.9",
+    "@types/node": "^13.1.2",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "axios": "^0.19.0",
     "chalk": "2.4.2",
     "compression": "1.7.4",
@@ -82,6 +87,7 @@
     "lodash": "4.17.11",
     "material-components-web": "^4.0.0",
     "minimist": "1.2.0",
+    "node-sass": "^4.13.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -95,7 +101,8 @@
     "redux-saga-firebase": "^0.15.0",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
