--- a/react-boilerplate-master/package.json
+++ b/react-boilerplate-master/package.json
@@ -87,7 +87,6 @@
     "lodash": "4.17.11",
     "material-components-web": "^4.0.0",
     "minimist": "1.2.0",
-    "node-sass": "^4.13.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -138,8 +137,8 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-redux-saga": "1.0.0",
     "eslint-plugin-react-hooks": "1.6.0",
+    "eslint-plugin-redux-saga": "1.0.0",
     "file-loader": "3.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -151,6 +150,7 @@
     "lint-staged": "8.1.5",
     "ngrok": "3.1.1",
     "node-plop": "0.18.0",
+    "node-sass": "^4.13.0",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.6",
     "plop": "2.3.0",
@@ -160,6 +160,7 @@
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
+    "sass-loader": "^8.0.0",
     "shelljs": "0.8.3",
     "style-loader": "0.23.1",
     "stylelint": "10.0.1",
